Update the calendar for 2023/2024

--- a/index.html
+++ b/index.html
@@ -1410,68 +1410,115 @@
 
                 <div class="sec-sub-title text-center wow fadeInRight animated" data-wow-duration="500ms">
                     <p>
-                        Esta é o nosso calendário de atividades para 2022/2023!
+                        Esta é o nosso calendário de atividades para 2023/2024!
                     </p>
                 </div>
 
                 <div class="timeline">
                     <ul>
                         <li>
-                            <span>21 de Janeiro de 2023</span>
+                            <span>3 de Setembro 2023</span>
                             <div class="content">
-                                <h3>Seixal - Estágio Nacional</h3>
+                                <h3>Rebordosa - Treino de Graduados </h3>
                                 <p>
-                                    Estágio nacional no Seixal.
+                                    Treino de graduados em Rebordosa das 10h às 12h.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>22 de Janeiro de 2023</span>
+                            <span>17 de Setembro 2023</span>
                             <div class="content">
-                                <h3>Seixal - Estágio Graduados</h3>
+                                <h3>Rebordosa - Treino de Graduados </h3>
                                 <p>
-                                    Estágio Graduados no Seixal.
+                                    Treino de graduados em Rebordosa das 10h às 12h.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>5 de Março 2023</span>
+                            <span>8 de Outubro 2023</span>
                             <div class="content">
-                                <h3>Évora - Estágio Nacional e Graduados</h3>
+                                <h3>Lisboa - Estágio Graduados</h3>
                                 <p>
-                                    Estágio Nacional e Graduados em Évora.
+                                    Estágio Graduados no Brasil Gym das 10h às 12h.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>25 de Março de 2023</span>
+                            <span>22 de Outubro 2023</span>
                             <div class="content">
-                                <h3>Rebordosa - Estágio Nacional</h3>
+                                <h3>Rebordosa - Treino de Graduados </h3>
                                 <p>
-                                    Estágio Nacional na Rebordosa.
+                                    Treino de graduados em Rebordosa das 10h às 12h.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>26 de Março de 2023</span>
+                            <span>12 de Novembro 2023</span>
                             <div class="content">
-                                <h3>Rebordosa - Estágio Graduados</h3>
+                                <h3>Rebordosa - Treino de Graduados </h3>
                                 <p>
-                                    Estágio Graduados na Rebordosa.
+                                    Treino de graduados em Rebordosa das 10h às 12h.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>16 de Abril de 2023</span>
+                            <span>25 e 26 de Novembro 2023</span>
                             <div class="content">
-                                <h3>Seixal - Taça JIP (Jundokan Internacional de Portugal) </h3>
+                                <h3>Rebordosa - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Taça JIP (Jundokan Internacional de Portugal) no Seixal.
+                                    Dia 25 estágio nacional e dia 26 estágio de graduados em Rebordosa. Horário a anunciar.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>26-28 Maio 2023</span>
+                            <span>27 de Janeiro 2024</span>
+                            <div class="content">
+                                <h3>Rebordosa - Estágio e Exames </h3>
+                                <p>
+                                    Estágio e exames em Rebordosa/Paços das 15h às 18h.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>17 e 18 de Fevereiro 2024</span>
+                            <div class="content">
+                                <h3>Seixal - Estágio Nacional e de Graduados </h3>
+                                <p>
+                                    Dia 17 estágio nacional e dia 18 estágio de graduados no Seixal. Horário a anunciar.
+                                </p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <span>3 de Março de 2024</span>
+                            <div class="content">
+                                <h3>Évora - Estágio Nacional e de Graduados </h3>
+                                <p>
+                                    Estágio nacional e graduados em Évora das 10h às 13h.
+                                </p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <span>16 e 17 de Março 2024</span>
+                            <div class="content">
+                                <h3>Rebordosa - Estágio Nacional e de Graduados </h3>
+                                <p>
+                                    Dia 16 estágio nacional e dia 17 estágio de graduados em Rebordosa. Horário a anunciar.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>7 de Abril 2024</span>
+                            <div class="content">
+                                <h3>Rebordosa - Taça JIP </h3>
+                                <p>
+                                    Dia 7 realiza-se a Taça JIP em Rebodosa. Horários a anunciar.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>17-19 de Maio 2024</span>
                             <div class="content">
                                 <h3>Lagos - Retiro </h3>
                                 <p>
@@ -1479,31 +1526,23 @@
                                 </p>
                             </div>
                         </li>
+                        
                         <li>
-                            <span>17 Junho 2023</span>
+                            <span>15 e 16 de Junho 2024</span>
                             <div class="content">
-                                <h3>Seixal - Estágio Nacional</h3>
+                                <h3>Seixal - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Estágio Nacional no Seixal.
+                                    Dia 15 estágio nacional e dia 16 estágio de graduados no Seixal. Horário a anunciar.
                                 </p>
                             </div>
                         </li>
+
                         <li>
-                            <span>18 Junho 2023</span>
+                            <span>6 e 7 de Julho 2024</span>
                             <div class="content">
-                                <h3>Seixal - Estágio Graduados</h3>
+                                <h3>Rebordosa - Summer Camp</h3>
                                 <p>
-                                    Estágio Graduados no Seixal.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <span>1-2 Julho 2023</span>
-                            <div class="content">
-                                <h3>Rebordosa - Gasshuku Internacional</h3>
-                                <p>
-                                    Gasshuku Internacional, aberto a todos os interessados e com convidados
-                                    internacionais.
+                                    Tradicional Summer Camp em Rebordosa. Programa a anunciar.
                                 </p>
                             </div>
                         </li>
