Updates to remove new dojo and updates to sensei campos description

--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
     <!-- Meta Description -->
     <meta name="description" content="Jundokan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <meta name="keywords"
-        content="karate, karate do, okinawa, goju ryu, goju, ryu, portugal, defesa pessoal, autoestima" />
+        content="jip, karate, karate-do, karate, okinawa, goju-ryu, goju, ryu, portugal, defesa pessoal, autoestima, sensei jose campos, jundokan, internacional" />
     <meta name="author" content="Jundokan International Portugal" />
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
+    <meta property="og:title" content="Jundokan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jiportugal.github.io/index.html" />
     <meta property="og:image" content="https://jiportugal.github.io/img/estimatorss.png" />
-    <meta property="og:description"
-        content="Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
-
+    <meta property="og:description" content="JIP, Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <link rel="icon" href="/img/favicon.jfif?format=80w" type="image/x-icon" />
     <!-- Google Font -->
 
@@ -78,7 +76,8 @@
                 <!-- logo -->
                 <a class="navbar-brand" href="#body">
                     <h1 id="logo">
-                        <img src="img/jundokan_logo_transparent.png" alt="JIP" style="height: 50px; margin-right: 20px;" />
+                        <img src="img/jundokan_logo_transparent.png" alt="JIP"
+                            style="height: 50px; margin-right: 20px;" />
                         <span>Jundokan Internacional Portugal</span>
                     </h1>
                 </a>
@@ -111,8 +110,8 @@
             <!-- Indicators bullet -->
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                 <!--
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                 -->
@@ -121,7 +120,7 @@
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-                
+
                 <!-- single slide -->
                 <!--
                 <div class="item active"
@@ -197,8 +196,12 @@
                 <!-- end single slide -->
 
                 <!-- single slide -->
+                <!--
                 <div class="item active"
-                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
+                style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
+                -->
+                <div class="item active"
+                style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/jundokan.png); background-size: contain; background-repeat: repeat-x;">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
                             Treina<span> connosco</span>!</h2>
@@ -225,6 +228,7 @@
                 <!-- end single slide -->
 
                 <!-- single slide -->
+                <!--
                 <div class="item"
                     style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
                     <div class="carousel-caption">
@@ -246,6 +250,7 @@
                         </ul>
                     </div>
                 </div>
+                -->
                 <!-- end single slide -->
 
             </div>
@@ -1178,10 +1183,37 @@
                 </div>
 
                 <div class="sec-sub-title text-center wow fadeInRight animated" data-wow-duration="500ms">
-                    <p>
+                    <p>    
                         Esta é a equipa técnica que estará contigo nos momentos mais exigentes!
                     </p>
                 </div>
+
+                <div class="service-desc text-center wow fadeInRight animated" data-wow-duration="500ms">
+                    <p>
+                        A equipa técnica é liderada pelo <b>Sensei José Campos</b> que se iniciou no Goju Ryu Karate, na Africa do
+                        Sul em 1967.
+                        Treinou com os Senseis James Rousseau, Morio Higaonna e Teruo Chinen.
+                        Foi chefe de arbitragem na Africa do Sul e Arbitro internacional.
+                        Continua a sua dedicação à pratica do Karate, mantendo o seu treino diário.
+                        Foi instructor Chefe da Jundokan Internacional na Africa do Sul e é atualmente Diretor Técnico da
+                        Jundokan Internacional de Portugal desde 1992.
+                        Vê o Karaté como uma filosofia de vida e um meio de comunicação entre praticantes, seja qual for o
+                        estilo ou Associação.
+                    </p>
+                    <p>-----</p>
+                    <p>
+                        <b>Sensei José Campos</b> started his training in Goju Ryu Karate in South Africa in 1967.
+                        Trained with Senseis James Rousseau, Morio Higaonna e Teruo Chinen.
+                        He was chief referee for South Africa and Chief Instructor for Jundokan International, in South
+                        Africa.
+                        He is the Chief Instructor for Jundokan International in Portugal since 1992.
+                        He continues his dedication to Goju Ryu karate, through daily pratice and sees karate as a means of
+                        communication between practitioners, irrelevant of their style or Association.
+                    </p>
+                </div>
+
+                <br/>
+                <br/>
 
                 <!-- single member -->
                 <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
@@ -1190,10 +1222,11 @@
                         <img src="img/team/campos.jpg" alt="Team Member" class="img-responsive" />
                         <figcaption class="overlay">
                             <h5>8º Dan</h5>
-                            <p>Começou a treinar Goju Ryu com o Sensei James Rousseau em 1966, treinando com o colega e
-                                Sensei Arnold de Beer.
-                                Desde 1992 retornou a Portugal, liderando a Associação JIP, e em representação do Sensei
-                                Teruo Chinen!</p>
+                            <p>
+                                José Campos que se iniciou no Goju Ryu Karate, na Africa do Sul em 1967.
+                                Treinou com os Senseis James Rousseau, Morio Higaonna e Teruo Chinen.
+                                Diretor Técnico da Jundokan Internacional de Portugal desde 1992.
+                            </p>
                             <ul class="social-links text-center">
                                 <li>
                                     <a href=""><i class="fa fa-twitter fa-lg"></i></a>
@@ -1205,7 +1238,7 @@
                         </figcaption>
                     </div>
                     <h4>Sensei José Campos</h4>
-                    <span>Instrutor Chefe e Director Tecnico Nacional</span>
+                    <span>Instrutor Chefe e Director Técnico Nacional</span>
                 </figure>
                 <!-- end single member -->
 
@@ -1466,7 +1499,8 @@
                             <div class="content">
                                 <h3>Rebordosa - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Dia 25 estágio nacional e dia 26 estágio de graduados em Rebordosa. Horário a anunciar.
+                                    Dia 25 estágio nacional e dia 26 estágio de graduados em Rebordosa. Horário a
+                                    anunciar.
                                 </p>
                             </div>
                         </li>
@@ -1504,7 +1538,8 @@
                             <div class="content">
                                 <h3>Rebordosa - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Dia 16 estágio nacional e dia 17 estágio de graduados em Rebordosa. Horário a anunciar.
+                                    Dia 16 estágio nacional e dia 17 estágio de graduados em Rebordosa. Horário a
+                                    anunciar.
                                 </p>
                             </div>
                         </li>
@@ -1526,7 +1561,7 @@
                                 </p>
                             </div>
                         </li>
-                        
+
                         <li>
                             <span>15 e 16 de Junho 2024</span>
                             <div class="content">
