--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jiportugal.github.io/index.html" />
     <meta property="og:image" content="https://jiportugal.github.io/img/estimatorss.png" />
-    <meta property="og:description" content="JIP, Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
+    <meta property="og:description"
+        content="JIP, Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <link rel="icon" href="/img/favicon.jfif?format=80w" type="image/x-icon" />
     <!-- Google Font -->
 
@@ -201,7 +202,7 @@
                 style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
                 -->
                 <div class="item active"
-                style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/jundokan.png); background-size: contain; background-repeat: repeat-x;">
+                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/jundokan.png); background-size: contain; background-repeat: repeat-x;">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
                             Treina<span> connosco</span>!</h2>
@@ -1183,21 +1184,24 @@
                 </div>
 
                 <div class="sec-sub-title text-center wow fadeInRight animated" data-wow-duration="500ms">
-                    <p>    
+                    <p>
                         Esta é a equipa técnica que estará contigo nos momentos mais exigentes!
                     </p>
                 </div>
 
                 <div class="service-desc text-center wow fadeInRight animated" data-wow-duration="500ms">
                     <p>
-                        A equipa técnica é liderada pelo <b>Sensei José Campos</b> que se iniciou no Goju Ryu Karate, na Africa do
+                        A equipa técnica é liderada pelo <b>Sensei José Campos</b> que se iniciou no Goju Ryu Karate, na
+                        Africa do
                         Sul em 1967.
                         Treinou com os Senseis James Rousseau, Morio Higaonna e Teruo Chinen.
                         Foi chefe de arbitragem na Africa do Sul e Arbitro internacional.
                         Continua a sua dedicação à pratica do Karate, mantendo o seu treino diário.
-                        Foi instructor Chefe da Jundokan Internacional na Africa do Sul e é atualmente Diretor Técnico da
+                        Foi instructor Chefe da Jundokan Internacional na Africa do Sul e é atualmente Diretor Técnico
+                        da
                         Jundokan Internacional de Portugal desde 1992.
-                        Vê o Karaté como uma filosofia de vida e um meio de comunicação entre praticantes, seja qual for o
+                        Vê o Karaté como uma filosofia de vida e um meio de comunicação entre praticantes, seja qual for
+                        o
                         estilo ou Associação.
                     </p>
                     <p>-----</p>
@@ -1207,13 +1211,14 @@
                         He was chief referee for South Africa and Chief Instructor for Jundokan International, in South
                         Africa.
                         He is the Chief Instructor for Jundokan International in Portugal since 1992.
-                        He continues his dedication to Goju Ryu karate, through daily pratice and sees karate as a means of
+                        He continues his dedication to Goju Ryu karate, through daily pratice and sees karate as a means
+                        of
                         communication between practitioners, irrelevant of their style or Association.
                     </p>
                 </div>
 
-                <br/>
-                <br/>
+                <br />
+                <br />
 
                 <!-- single member -->
                 <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
@@ -1437,67 +1442,41 @@
         <div class="container">
             <div class="row">
                 <div class="sec-title text-center wow fadeInUp animated" data-wow-duration="700ms">
-                    <h2>Calendário 2022</h2>
+                    <h2>Calendário 2024/2025</h2>
                     <div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
                 </div>
 
                 <div class="sec-sub-title text-center wow fadeInRight animated" data-wow-duration="500ms">
                     <p>
-                        Esta é o nosso calendário de atividades para 2023/2024!
+                        Esta é o nosso calendário de atividades para 2024/2025!
                     </p>
                 </div>
 
                 <div class="timeline">
                     <ul>
                         <li>
-                            <span>3 de Setembro 2023</span>
+                            <span>6 de Outubro 2024</span>
                             <div class="content">
-                                <h3>Rebordosa - Treino de Graduados </h3>
+                                <h3>Brasil Gym - São João da Talha - Treino de Graduados </h3>
                                 <p>
-                                    Treino de graduados em Rebordosa das 10h às 12h.
+                                    Treino de graduados no Brasil Gym das 10h às 12h.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>17 de Setembro 2023</span>
-                            <div class="content">
-                                <h3>Rebordosa - Treino de Graduados </h3>
-                                <p>
-                                    Treino de graduados em Rebordosa das 10h às 12h.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <span>8 de Outubro 2023</span>
-                            <div class="content">
-                                <h3>Lisboa - Estágio Graduados</h3>
-                                <p>
-                                    Estágio Graduados no Brasil Gym das 10h às 12h.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <span>22 de Outubro 2023</span>
-                            <div class="content">
-                                <h3>Rebordosa - Treino de Graduados </h3>
-                                <p>
-                                    Treino de graduados em Rebordosa das 10h às 12h.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <span>12 de Novembro 2023</span>
-                            <div class="content">
-                                <h3>Rebordosa - Treino de Graduados </h3>
-                                <p>
-                                    Treino de graduados em Rebordosa das 10h às 12h.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <span>25 e 26 de Novembro 2023</span>
+                            <span>2 e 3 de Novembro 2024</span>
                             <div class="content">
                                 <h3>Rebordosa - Estágio Nacional e de Graduados </h3>
+                                <p>
+                                    Dia 2 estágio nacional e dia 3 estágio de graduados em Rebordosa. Horário a
+                                    anunciar.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>25 e 26 de Janeiro 2025</span>
+                            <div class="content">
+                                <h3>Seixal - Estágio Nacional e de Graduados </h3>
                                 <p>
                                     Dia 25 estágio nacional e dia 26 estágio de graduados em Rebordosa. Horário a
                                     anunciar.
@@ -1505,79 +1484,59 @@
                             </div>
                         </li>
                         <li>
-                            <span>27 de Janeiro 2024</span>
-                            <div class="content">
-                                <h3>Rebordosa - Estágio e Exames </h3>
-                                <p>
-                                    Estágio e exames em Rebordosa/Paços das 15h às 18h.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <span>17 e 18 de Fevereiro 2024</span>
-                            <div class="content">
-                                <h3>Seixal - Estágio Nacional e de Graduados </h3>
-                                <p>
-                                    Dia 17 estágio nacional e dia 18 estágio de graduados no Seixal. Horário a anunciar.
-                                </p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <span>3 de Março de 2024</span>
+                            <span>2 de Março 2025</span>
                             <div class="content">
                                 <h3>Évora - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Estágio nacional e graduados em Évora das 10h às 13h.
+                                    Dia 2 estágio nacional e de graduados em Rebordosa das 10h às 13h.
                                 </p>
                             </div>
                         </li>
-
                         <li>
-                            <span>16 e 17 de Março 2024</span>
+                            <span>29 e 30 de Março 2025</span>
                             <div class="content">
                                 <h3>Rebordosa - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Dia 16 estágio nacional e dia 17 estágio de graduados em Rebordosa. Horário a
+                                    Dia 29 estágio nacional e dia 30 estágio de graduados em Rebordosa. Horário a
                                     anunciar.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>7 de Abril 2024</span>
+                            <span>13 de Abril 2025</span>
                             <div class="content">
-                                <h3>Rebordosa - Taça JIP </h3>
+                                <h3>Seixal - Taça JIP</h3>
                                 <p>
-                                    Dia 7 realiza-se a Taça JIP em Rebodosa. Horários a anunciar.
+                                    Taça da Judokan Internacional de Portugal no Seixal. Programa e horários a anunciar.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>17-19 de Maio 2024</span>
+                            <span>23, 24 e 25 de Maio 2025</span>
                             <div class="content">
-                                <h3>Lagos - Retiro </h3>
+                                <h3>Lagos - Retiro de Instructores</h3>
                                 <p>
-                                    Retiro de instrutores e cintos negros.
+                                    Tradicional Retiro de Instrutores. Programa a anunciar.
                                 </p>
                             </div>
                         </li>
-
                         <li>
-                            <span>15 e 16 de Junho 2024</span>
+                            <span>28 e 29 de Junho 2025</span>
                             <div class="content">
                                 <h3>Seixal - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Dia 15 estágio nacional e dia 16 estágio de graduados no Seixal. Horário a anunciar.
+                                    Dia 28 estágio nacional e dia 29 estágio de graduados em Rebordosa. Horário a
+                                    anunciar.
                                 </p>
                             </div>
                         </li>
-
                         <li>
-                            <span>6 e 7 de Julho 2024</span>
+                            <span>12 e 13 de Julho 2025</span>
                             <div class="content">
                                 <h3>Rebordosa - Summer Camp</h3>
                                 <p>
-                                    Tradicional Summer Camp em Rebordosa. Programa a anunciar.
+                                    Dia 12 e 13 o tradicional e sempre agradável Summer Camp em Rebordosa. Programa a
+                                    anunciar.
                                 </p>
                             </div>
                         </li>
