Updades to calendar in 2024

--- a/index.html
+++ b/index.html
@@ -1455,11 +1455,29 @@
                 <div class="timeline">
                     <ul>
                         <li>
+                            <span>15 de Setembro 2024</span>
+                            <div class="content">
+                                <h3>Estágio de Graduados no Dojo de Rebordosa</h3>
+                                <p>
+                                    Treino de graduados em Rebordosa 10h às 12h, aberto para 5ºkyu e acima.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
                             <span>6 de Outubro 2024</span>
                             <div class="content">
                                 <h3>Brasil Gym - São João da Talha - Treino de Graduados </h3>
                                 <p>
                                     Treino de graduados no Brasil Gym das 10h às 12h.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>17 a 19 de Outubro 2024</span>
+                            <div class="content">
+                                <h3>Gasshuku da Jundokan Internacional - Peru</h3>
+                                <p>
+                                    Gasshuku da Jundokan Internacional no Peru, organizado pelo sensei Alfredo.
                                 </p>
                             </div>
                         </li>
@@ -1478,7 +1496,7 @@
                             <div class="content">
                                 <h3>Seixal - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Dia 25 estágio nacional e dia 26 estágio de graduados em Rebordosa. Horário a
+                                    Dia 25 estágio nacional e dia 26 estágio de graduados em Seixal. Horário a
                                     anunciar.
                                 </p>
                             </div>
@@ -1488,7 +1506,7 @@
                             <div class="content">
                                 <h3>Évora - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Dia 2 estágio nacional e de graduados em Rebordosa das 10h às 13h.
+                                    Dia 2 estágio nacional e de graduados em Évora das 10h às 13h.
                                 </p>
                             </div>
                         </li>
@@ -1525,7 +1543,7 @@
                             <div class="content">
                                 <h3>Seixal - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Dia 28 estágio nacional e dia 29 estágio de graduados em Rebordosa. Horário a
+                                    Dia 28 estágio nacional e dia 29 estágio de graduados em Seixal. Horário a
                                     anunciar.
                                 </p>
                             </div>
