Updates to calendar

--- a/index.html
+++ b/index.html
@@ -1457,6 +1457,15 @@
                         <li>
                             <span>15 de Setembro 2024</span>
                             <div class="content">
+                                <h3>Treino suplementar para graduados - Brasil Gym</h3>
+                                <p>
+                                    Treino suplementar de graduados (apenas 4ºDan e acima) no dojo Brasil Gym com orientação técnica do Instrutor Chefe Mestre José Campos.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>15 de Setembro 2024</span>
+                            <div class="content">
                                 <h3>Estágio de Graduados no Dojo de Rebordosa</h3>
                                 <p>
                                     Treino de graduados em Rebordosa 10h às 12h, aberto para 5ºkyu e acima.
