--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <!--<![endif]-->
 
 <head>
+
+    <title>Jundokan International Portugal - Associação Okinawa Goju Ryu Karate Do</title>
     <!-- meta charec set -->
     <meta charset="utf-8" />
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
@@ -14,7 +16,7 @@
     <!-- Page Title -->
     <title>Jundokan International Portugal - Associação Okinawa Goju Ryu Karate Do</title>
     <!-- Meta Description -->
-    <meta name="description" content="Jundokan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
+    <meta name="description" content="Jundokan International Portugal offers Karate training and promotes Okinawa Goju Ryu Karate Do in Portugal. Join us to learn and practice Karate.">
     <meta name="keywords"
         content="jip, karate, karate-do, karate, okinawa, goju-ryu, goju, ryu, portugal, defesa pessoal, autoestima, sensei jose campos, jundokan, internacional" />
     <meta name="author" content="Jundokan International Portugal" />
@@ -1511,11 +1513,11 @@
                             </div>
                         </li>
                         <li>
-                            <span>2 de Março 2025</span>
+                            <span>16 de Março 2025</span>
                             <div class="content">
                                 <h3>Évora - Estágio Nacional e de Graduados </h3>
                                 <p>
-                                    Dia 2 estágio nacional e de graduados em Évora das 10h às 13h.
+                                    Dia 16 estágio nacional e de graduados em Évora das 10h às 13h.
                                 </p>
                             </div>
                         </li>
