--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <meta property="og:title" content="Jundokan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jiportugal.github.io/index.html" />
-    <meta property="og:image" content="https://jiportugal.github.io/img/estimatorss.png" />
+    <meta property="og:url" content="https://jundokan-pt.github.io/index.html" />
+    <meta property="og:image" content="https://jundokan-pt.github.io/img/estimatorss.png" />
     <meta property="og:description"
         content="JIP, Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <link rel="icon" href="/img/favicon.jfif?format=80w" type="image/x-icon" />
